// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ffCommands that ffmpeg commands are generated 1`] = `
Array [
  "-map",
  "0:v:0",
  "-c:v:0",
  "libx264",
  "-filter:v:0",
  "scale=1920:1920:force_original_aspect_ratio=decrease,scale=trunc(iw/2)*2:trunc(ih/2)*2",
  "-crf",
  "22",
  "-preset",
  "medium",
  "-bf",
  "2",
  "-coder",
  "1",
  "-profile:v:0",
  "high",
  "-map",
  "0:a?:0",
  "-c:a:1",
  "aac",
  "-b:a:0",
  "128k",
  "-ar:1",
  "48000",
  "-pix_fmt yuv420p",
  "-force_key_frames expr:gte(t,n_forced*2)",
  "-hls_playlist 1",
  "-hls_segment_type mpegts",
  "-hls_playlist_type vod",
  "-hls_time 2",
  "./stream.m3u8",
]
`;

exports[`ffCommands that ffmpeg commands are generated 1/3 1`] = `
Array [
  "-map",
  "0:v:0",
  "-c:v:0",
  "libx264",
  "-filter:v:0",
  "scale=1920:1920:force_original_aspect_ratio=decrease,scale=trunc(iw/2)*2:trunc(ih/2)*2",
  "-crf",
  "22",
  "-preset",
  "medium",
  "-bf",
  "2",
  "-coder",
  "1",
  "-profile:v:0",
  "high",
]
`;

exports[`ffCommands that ffmpeg commands are generated 2`] = `
Array [
  "-map",
  "0:v:0",
  "-c:v:0",
  "libx264",
  "-filter:v:0",
  "scale=1920:1920:force_original_aspect_ratio=decrease,scale=trunc(iw/2)*2:trunc(ih/2)*2",
  "-crf",
  "22",
  "-preset",
  "medium",
  "-bf",
  "2",
  "-coder",
  "1",
  "-profile:v:0",
  "high",
  "-map",
  "0:a?:0",
  "-c:a:1",
  "aac",
  "-b:a:0",
  "128k",
  "-ar:1",
  "48000",
  "-pix_fmt yuv420p",
  "-force_key_frames expr:gte(t,n_forced*2)",
  "-hls_playlist 1",
  "-hls_segment_type mpegts",
  "-hls_playlist_type vod",
  "-hls_time 2",
  "./stream.m3u8",
]
`;

exports[`ffCommands that ffmpeg commands are generated 2/3 1`] = `
Array [
  "-map",
  "0:v:0",
  "-c:v:0",
  "libx264",
  "-filter:v:0",
  "scale=1920:1920:force_original_aspect_ratio=decrease,scale=trunc(iw/2)*2:trunc(ih/2)*2",
  "-crf",
  "22",
  "-preset",
  "medium",
  "-bf",
  "2",
  "-coder",
  "1",
  "-profile:v:0",
  "high",
  "-map",
  "0:a?:0",
  "-c:a:1",
  "aac",
  "-b:a:0",
  "128k",
  "-ar:1",
  "48000",
  "-pix_fmt yuv420p",
  "-force_key_frames expr:gte(t,n_forced*2)",
  "-hls_playlist 1",
  "-hls_segment_type mpegts",
  "-hls_playlist_type vod",
  "-hls_time 2",
  "./stream.m3u8",
]
`;

exports[`ffCommands that ffmpeg commands are generated 3/3 1`] = `
Array [
  "-map",
  "0:v:0",
  "-c:v:0",
  "libx264",
  "-filter:v:0",
  "scale=1920:1920:force_original_aspect_ratio=decrease,scale=trunc(iw/2)*2:trunc(ih/2)*2",
  "-crf",
  "22",
  "-preset",
  "medium",
  "-bf",
  "2",
  "-coder",
  "1",
  "-profile:v:0",
  "high",
  "-map",
  "0:a?:0",
  "-c:a:1",
  "aac",
  "-b:a:0",
  "128k",
  "-ar:1",
  "48000",
  "-pix_fmt yuv420p",
  "-force_key_frames expr:gte(t,n_forced*2)",
  "-hls_playlist 1",
  "-hls_segment_type mpegts",
  "-hls_playlist_type vod",
  "-hls_time 2",
  "./stream.m3u8",
]
`;

exports[`full ffmpeg command generation tests that ffmpeg commands are generated 3/3 1`] = `
Array [
  Object {
    "defaultMaxRate": 1500,
    "height": 360,
    "name": "360",
    "width": 640,
  },
  Object {
    "defaultMaxRate": 8000,
    "height": 720,
    "name": "720",
    "width": 1280,
  },
  Object {
    "defaultMaxRate": 12000,
    "height": 1080,
    "name": "1080",
    "width": 1920,
  },
]
`;

exports[`full ffmpeg command generation tests that ffmpeg commands are generated 3/3 2`] = `
Array [
  "-map",
  "0:v:0",
  "-c:v:0",
  "libx264",
  "-filter:v:0",
  "scale=640:640:force_original_aspect_ratio=decrease,scale=trunc(iw/2)*2:trunc(ih/2)*2",
  "-crf",
  "22",
  "-preset",
  "medium",
  "-bf",
  "2",
  "-coder",
  "1",
  "-profile:v:0",
  "high",
  "-map",
  "0:v:0",
  "-c:v:1",
  "libx264",
  "-filter:v:1",
  "scale=1280:1280:force_original_aspect_ratio=decrease,scale=trunc(iw/2)*2:trunc(ih/2)*2",
  "-crf",
  "22",
  "-preset",
  "medium",
  "-bf",
  "2",
  "-coder",
  "1",
  "-profile:v:1",
  "high",
  "-map",
  "0:v:0",
  "-c:v:2",
  "libx264",
  "-filter:v:2",
  "scale=1920:1920:force_original_aspect_ratio=decrease,scale=trunc(iw/2)*2:trunc(ih/2)*2",
  "-crf",
  "22",
  "-preset",
  "medium",
  "-bf",
  "2",
  "-coder",
  "1",
  "-profile:v:2",
  "high",
]
`;

exports[`full ffmpeg command generation tests that ffmpeg commands are generated 3/3 3`] = `
Array [
  "-map",
  "0:v:0",
  "-c:v:0",
  "libx264",
  "-filter:v:0",
  "scale=640:640:force_original_aspect_ratio=decrease,scale=trunc(iw/2)*2:trunc(ih/2)*2",
  "-crf",
  "22",
  "-preset",
  "medium",
  "-bf",
  "2",
  "-coder",
  "1",
  "-profile:v:0",
  "high",
  "-map",
  "0:v:0",
  "-c:v:1",
  "libx264",
  "-filter:v:1",
  "scale=1280:1280:force_original_aspect_ratio=decrease,scale=trunc(iw/2)*2:trunc(ih/2)*2",
  "-crf",
  "22",
  "-preset",
  "medium",
  "-bf",
  "2",
  "-coder",
  "1",
  "-profile:v:1",
  "high",
  "-map",
  "0:v:0",
  "-c:v:2",
  "libx264",
  "-filter:v:2",
  "scale=1920:1920:force_original_aspect_ratio=decrease,scale=trunc(iw/2)*2:trunc(ih/2)*2",
  "-crf",
  "22",
  "-preset",
  "medium",
  "-bf",
  "2",
  "-coder",
  "1",
  "-profile:v:2",
  "high",
  "-map",
  "0:a?:0",
  "-c:a:1",
  "aac",
  "-b:a:0",
  "128k",
  "-ar:1",
  "48000",
  "-pix_fmt yuv420p",
  "-force_key_frames expr:gte(t,n_forced*2)",
  "-hls_playlist 1",
  "-hls_segment_type mpegts",
  "-hls_playlist_type vod",
  "-hls_time 2",
  "./stream.m3u8",
]
`;

exports[`full ffmpeg command generation tests that ffmpeg commands are generated 3/3 4`] = `"-map 0:v:0 -c:v:0 libx264 -filter:v:0 scale=640:640:force_original_aspect_ratio=decrease,scale=trunc(iw/2)*2:trunc(ih/2)*2 -crf 22 -preset medium -bf 2 -coder 1 -profile:v:0 high -map 0:v:0 -c:v:1 libx264 -filter:v:1 scale=1280:1280:force_original_aspect_ratio=decrease,scale=trunc(iw/2)*2:trunc(ih/2)*2 -crf 22 -preset medium -bf 2 -coder 1 -profile:v:1 high -map 0:v:0 -c:v:2 libx264 -filter:v:2 scale=1920:1920:force_original_aspect_ratio=decrease,scale=trunc(iw/2)*2:trunc(ih/2)*2 -crf 22 -preset medium -bf 2 -coder 1 -profile:v:2 high -map 0:a?:0 -c:a:1 aac -b:a:0 128k -ar:1 48000 -pix_fmt yuv420p -force_key_frames expr:gte(t,n_forced*2) -hls_playlist 1 -hls_segment_type mpegts -hls_playlist_type vod -hls_time 2 ./stream.m3u8"`;
